--- a/styles/index.css
+++ b/styles/index.css
@@ -9,6 +9,15 @@
 
 body {
   margin: 0;
+  /* font-family: "Centra No2", -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Roboto, "Helvetica Neue", Arial, sans-serif;
+
+  font-size: 14px;
+  font-weight: 400;
+
+  line-height: 18px;
+
+  color: rgb(25, 30, 59); */
 }
 
 header {
