--- a/styles/accomodation-section.css
+++ b/styles/accomodation-section.css
@@ -4,8 +4,13 @@
 }
 
 .accomodation-section h1 {
-  font-size: 28px;
   margin-bottom: 20px;
+  font-family: "Centra No2", -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Roboto, "Helvetica Neue", Arial, sans-serif;
+  font-size: 28px;
+  font-weight: 500;
+  line-height: 32px;
+  color: rgb(25, 30, 59);
 }
 
 .accomodations-div {
@@ -27,8 +32,13 @@
 }
 
 .accomodation p {
-  color: white;
   background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.7));
   margin: 0;
   padding: 10px;
+  font-family: "Centra No2", -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Roboto, "Helvetica Neue", Arial, sans-serif;
+  font-size: 16px;
+  font-weight: bold;
+  line-height: normal;
+  color: white;
 }
