--- a/styles/advertise-section.css
+++ b/styles/advertise-section.css
@@ -16,26 +16,37 @@
   height: 370px;
   border-radius: 20px;
   margin-left: 60px;
-  padding: 10px 25px;
+  padding: 0 25px;
+
+  color: rgb(25, 30, 59);
 }
 
 .advertise-content h1 {
-  font-size: 30px;
-  font-weight: normal;
   font-family: "Lardent Pro Slab", Georgia, Times, "Times New Roman", serif;
+  font-size: 36px;
+  font-weight: 500;
+  line-height: 40px;
+  margin-bottom: 20px;
 }
 
 .advertise-content a {
-  padding: 15px;
-  background-color: blue;
+  padding: 13px 15px;
+  background-color: rgb(0, 126, 243);
   text-decoration: none;
   color: white;
   border-radius: 30px;
-  margin-top: 30px;
+  font-size: 16px;
+  font-weight: 500;
 }
 
 .advertise-content p {
   font-weight: normal;
-  margin-bottom: 50px;
+  margin-top: 0;
+  margin-bottom: 40px;
+  font-family: "Centra No2", -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Roboto, "Helvetica Neue", Arial, sans-serif;
   font-size: 16px;
+  font-weight: 400;
+  line-height: 20px;
+  color: rgb(25, 30, 59);
 }
