--- a/styles/index.css
+++ b/styles/index.css
@@ -1,71 +1,60 @@
 * {
   box-sizing: border-box;
-  font-family: "Roboto";
-  color: rgba(1, 12, 27, 0.8);
-  font-size: 14px;
-  font-weight: bold;
-  /* letter-spacing: 1px; */
 }
 
 body {
   margin: 0;
-  /* font-family: "Centra No2", -apple-system, BlinkMacSystemFont, "Segoe UI",
+  font-family: "Centra No2", -apple-system, BlinkMacSystemFont, "Segoe UI",
     Roboto, "Helvetica Neue", Arial, sans-serif;
-
   font-size: 14px;
-  font-weight: 400;
-
+  font-weight: 500;
   line-height: 18px;
-
-  color: rgb(25, 30, 59); */
+  color: rgb(25, 30, 59);
 }
 
 header {
   display: flex;
-  padding: 15px;
+  padding: 12px 20px;
 }
 
 .tabs {
   display: flex;
   list-style: none;
-  /* background-color: green; */
 }
 
 .logo {
-  flex: 3;
+  flex: 4;
   display: flex;
   justify-content: center;
   align-items: center;
-  /* background-color: orange; */
 }
 
 .tabs {
-  flex: 4;
+  flex: 5;
 }
 
 .tab-link {
   padding: 0 20px;
-
-  color: rgb(0, 0, 54);
-
+  color: rgb(25, 30, 59);
   text-decoration: none;
-
-  font-size: 13px;
-  font-weight: bold;
 }
 
 .tab-link:hover {
-  color: rgb(0, 110, 255);
+  color: rgb(0, 77, 177);
 }
 
 .download-link {
-  border: 1px solid rgba(0, 0, 0, 0.4);
+  border: 1px solid rgba(0, 0, 0, 0.2);
   padding: 3px 10px;
-  font-size: 13px;
-  font-weight: bold;
+
   border-radius: 20px;
   text-decoration: none;
-  color: rgb(0, 0, 54);
+  color: rgb(25, 30, 59);
+}
+
+.download-link i {
+  color: rgb(0, 77, 177);
+  font-size: 12px;
 }
 
 .download-link:hover {
