--- a/styles/info-section.css
+++ b/styles/info-section.css
@@ -1,21 +1,52 @@
 .info-section {
   width: 82rem;
   margin: 40px auto;
+  font-family: "Centra No2", -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Roboto, "Helvetica Neue", Arial, sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 18px;
+  color: rgb(25, 30, 59);
 }
 
 .info-section h1 {
-  font-size: 35px;
+  font-size: 36px;
+  font-weight: 500;
 }
 
-.info-section p {
-  font-weight: normal;
+.info-section p a {
+  color: rgb(0, 140, 255);
 }
 
 .ideas {
   list-style: none;
+  font-family: "Centra No2", -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Roboto, "Helvetica Neue", Arial, sans-serif;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 24px;
+  color: rgb(25, 30, 59);
+  padding: 0;
 }
 .ideas li {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  padding: 0;
+  cursor: pointer;
+  margin: 2px 10px;
+}
+
+.ideas li p {
+  margin: 0;
+  padding: 5px;
+}
+
+.ideas-heading {
+  font-family: "Centra No2", -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Roboto, "Helvetica Neue", Arial, sans-serif;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 24px;
+  color: rgb(25, 30, 59);
 }
