--- a/styles/others.css
+++ b/styles/others.css
@@ -1,6 +1,5 @@
 .register-div {
   background-color: rgb(0, 13, 70);
-  color: white;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -8,20 +7,28 @@
   margin: 20px auto;
   padding: 20px;
   border-radius: 20px;
+  font-family: "Centra No2", -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Roboto, "Helvetica Neue", Arial, sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 20px;
+  color: rgb(255, 255, 255);
 }
 
 .register-message {
   display: flex;
   align-items: center;
-  color: white;
   column-gap: 10px;
-  font-weight: bold;
 }
 
 .register-icon-div {
   padding: 12px;
-  background-color: rgb(118, 172, 189);
+  background-color: rgb(132, 189, 179);
   border-radius: 50%;
+}
+
+.register-icon-div i {
+  color: rgb(25, 30, 59);
 }
 
 .register-button {
@@ -40,10 +47,16 @@
   margin: auto;
   height: 130px;
   gap: 15px;
+  font-family: "Centra No2", -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Roboto, "Helvetica Neue", Arial, sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: normal;
+  color: rgb(255, 255, 255);
 }
 
 .raisen {
-  background-color: rgb(0, 132, 255);
+  background-color: rgb(0, 110, 255);
   display: grid;
   grid-template-columns: 1fr 1fr;
   border-radius: 20px;
@@ -56,7 +69,7 @@
 }
 
 .raisen-description {
-  padding: 15px;
+  padding: 0 15px 15px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
