--- a/styles/private.css
+++ b/styles/private.css
@@ -12,7 +12,13 @@
   column-gap: 15px;
 }
 
-.private-description {
+.private-description h1 {
+  font-family: "Centra No2", -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Roboto, "Helvetica Neue", Arial, sans-serif;
+  font-size: 36px;
+  font-weight: 500;
+  line-height: 40px;
+  color: rgb(25, 30, 59);
 }
 
 .privates {
@@ -30,9 +36,12 @@
   flex-direction: column;
   justify-content: end;
   padding: 0;
+  text-decoration: none;
 }
 
 .private p {
   color: white;
-  margin: 5px;
+  margin: 7px;
+  font-size: 16px;
+  font-weight: 700;
 }
