--- a/styles/trips-section.css
+++ b/styles/trips-section.css
@@ -4,6 +4,15 @@
   margin: 40px auto;
 }
 
+.trips-section > h1 {
+  font-family: "Centra No2", -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Roboto, "Helvetica Neue", Arial, sans-serif;
+  font-size: 28px;
+  font-weight: 500;
+  line-height: 32px;
+  color: rgb(25, 30, 59);
+}
+
 .trips {
   display: flex;
   gap: 15px;
@@ -27,15 +36,15 @@
 }
 
 .navigation {
-  width: 35px;
-  height: 35px;
+  width: 33px;
+  height: 33px;
   background-color: rgb(0, 0, 0, 0.4);
   color: white;
   border-radius: 50%;
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 25px;
+  font-size: 16px;
   font-weight: normal;
 }
 
@@ -57,4 +66,12 @@
   background-size: cover;
   background-position: center;
   border-radius: 15px;
+}
+
+.trip-description {
+  font-family: "Centra No2", -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Roboto, "Helvetica Neue", Arial, sans-serif;
+
+  line-height: normal;
+  color: rgb(25, 30, 59);
 }
